--- a/http/dir/404.html
+++ b/http/dir/404.html
@@ -15,7 +15,7 @@
     </div>
     
 
-    <a href="https://bbs.uestc.edu.cn/home.php?mod=space&uid=262026" title="欢迎注册清水河畔！" target="_blank"> <img src="raymoss.png" alt="图片加载失败！" /> </a>
+    <a href="https://bbs.uestc.edu.cn" title="欢迎注册清水河畔！" target="_blank"> <img src="raymoss.png" alt="图片加载失败！" /> </a>
 
   <body>
 </html>
